bppackaging/src/objects/Kit_Header_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Fixed_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate that the user has set a fixed price for the Kit.</description>
        <label>Fixed Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <description>Default setting of Item/Desc from Part and Labour Code</description>
        <formula>IF( 
	Part__c != null,  
	Part__r.Part_ID__c + &apos; - &apos; +  Part__r.Description__c ,  
	IF( Labour_Code__c != null,  
		Labour_Code__r.Code__c + &apos; - &apos; +  Labour_Code__r.Description__c , 
		&apos;&apos;
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item/Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kit_Header__c</fullName>
        <label>Kit Header</label>
        <referenceTo>Kit_Header__c</referenceTo>
        <relationshipLabel>Kit Header Line Items</relationshipLabel>
        <relationshipName>Kit_Header_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Kit_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kit Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labour Code</label>
        <referenceTo>Labour_Code__c</referenceTo>
        <relationshipLabel>Kit Header Line Items</relationshipLabel>
        <relationshipName>Kit_Header_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Kit Header Line Items</relationshipLabel>
        <relationshipName>Kit_Header_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Needed__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Required Field.  The quantity of the item that is needed for the kit.</description>
        <label>Qty Needed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <description>Default setting of Retail price based on Part and Labour code</description>
        <formula>IF( 
	Part__c != null,  
	Part__r.Retail_Price__c,  
	IF( Labour_Code__c != null,  
		Labour_Code__r.Rate__c , 
		0
	) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Kit_Price__c  *  Qty_Needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Kit Header Line Item</label>
    <nameField>
        <displayFormat>KHLI-{00000000}</displayFormat>
        <label>Kit Header Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kit Header Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>